# sgtdv-vesc_interface

./: .gitignore  CMakeLists.txt  README.md  build.bash  install_dependencies.sh  launch.bash  package.xml  start.bash
config/: joy.yaml  vehicle_geometry.yaml  vesc.yaml
include/: vesc_interface.h
launch/: racecar_control_interface.launch
launch/includes/: joy_teleop_interface.launch.xml  vehicle_geometry.launch.xml  vesc.launch.xml
msg/: Control.msg
src/: vesc_interface.cpp  vesc_interface_node.cpp
src/racecar/: CMakeLists.txt  package.xml
src/racecar/config/: joy.yaml  sgt.yaml  vehicle_geometry.yaml  vesc.yaml
src/racecar/include/: RaceCar.h  joy_vesc_interface.h  sgt_vesc_interface.h  vesc_interface.h
src/racecar/launch/: racecar_control_interface.launch
src/racecar/launch/includes/: joy_teleop_interface.launch.xml  vehicle_geometry.launch.xml  vesc.launch.xml
src/racecar/msg/: Control.msg
src/racecar/src/: RaceCar.cpp  RaceCarNODE.cpp  joy_vesc_interface.cpp  joy_vesc_interface_node.cpp  sgt_vesc_interface.cpp  sgt_vesc_interface_node.cpp  vesc_interface.cpp  vesc_interface_node.cpp
