<?xml version="1.0"?>
<package format="2">
  <name>vesc_interface</name>
  <version>0.0.1</version>
  <description>The vesc_interface package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="patrik.knaperek@sgteam.eu">Patrik Knaperek</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <depend>sgtdv_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
